--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,17 @@
 
 @font-face {
     font-family: 'Avenir LT';
-    src: url('fonts/AvenirNextLTPro-Regular.ttf');
+    src: url('AvenirNextLTPro-Regular.ttf');
     font-display: swap;
 }
 
 @layer base {
-  html {
-    font-family: "Avenir LT", sans-serif;
-  }
+    html {
+        font-family: "Avenir LT", sans-serif;
+        scroll-behavior: smooth;
+    }
+
+    strong {
+        color: #ED4E1C;
+    }
 }
